crates/dbx-sql/src/sql_dialect/snapshots/dbx_sql__sql_dialect__descriptor_snapshots__all_dialects_info.snap
---
source: crates/dbx-sql/src/sql_dialect/descriptor_snapshots.rs
assertion_line: 67
expression: all
---
[
  {
    "kind": "mysql",
    "label": "mysql",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "reorder_column",
      "comment",
      "create_index",
      "drop_index",
      "rebuild_index",
      "index_type",
      "index_comment",
      "alter_primary_key",
      "foreign_key",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "create_function",
      "drop_function",
      "create_sequence",
      "drop_sequence",
      "alter_owner",
      "grant_revoke",
      "if_not_exists",
      "temporary_table",
      "auto_increment"
    ],
    "max_identifier_length": 64,
    "supports_schemas": false,
    "supports_catalogs": false,
    "max_columns_per_table": 4096,
    "supports_json_type": true,
    "supports_array_type": false,
    "supports_enum_type": true,
    "supports_uuid_type": false,
    "supports_auto_increment": true,
    "supports_identity_columns": false,
    "supports_sequences": false,
    "supports_partitioning": true,
    "supports_full_text_index": true,
    "supports_spatial_index": true,
    "supports_transactional_ddl": false
  },
  {
    "kind": "postgres",
    "label": "postgres",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "comment",
      "create_index",
      "drop_index",
      "rebuild_index",
      "index_type",
      "index_include",
      "index_filter",
      "index_comment",
      "alter_primary_key",
      "foreign_key",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "create_function",
      "drop_function",
      "create_sequence",
      "drop_sequence",
      "alter_owner",
      "grant_revoke",
      "if_not_exists",
      "create_or_replace",
      "temporary_table",
      "transactional_ddl",
      "identity_columns"
    ],
    "max_identifier_length": 63,
    "supports_schemas": true,
    "supports_catalogs": false,
    "max_columns_per_table": 1600,
    "supports_json_type": true,
    "supports_array_type": true,
    "supports_enum_type": true,
    "supports_uuid_type": true,
    "supports_auto_increment": false,
    "supports_identity_columns": true,
    "supports_sequences": true,
    "supports_partitioning": true,
    "supports_full_text_index": true,
    "supports_spatial_index": true,
    "supports_transactional_ddl": true
  },
  {
    "kind": "sqlite",
    "label": "sqlite",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "create_index",
      "drop_index",
      "rebuild_index",
      "index_filter",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "create_function",
      "drop_function",
      "create_sequence",
      "drop_sequence",
      "if_not_exists",
      "auto_increment"
    ],
    "max_identifier_length": 255,
    "supports_schemas": false,
    "supports_catalogs": false,
    "max_columns_per_table": 2000,
    "supports_json_type": false,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": false,
    "supports_auto_increment": true,
    "supports_identity_columns": false,
    "supports_sequences": false,
    "supports_partitioning": false,
    "supports_full_text_index": true,
    "supports_spatial_index": false,
    "supports_transactional_ddl": false
  },
  {
    "kind": "duck_db",
    "label": "duckdb",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "create_index",
      "drop_index",
      "rebuild_index",
      "create_table",
      "drop_table",
      "truncate_table",
      "if_not_exists",
      "create_or_replace",
      "temporary_table"
    ],
    "max_identifier_length": 255,
    "supports_schemas": true,
    "supports_catalogs": false,
    "max_columns_per_table": 1600,
    "supports_json_type": true,
    "supports_array_type": true,
    "supports_enum_type": true,
    "supports_uuid_type": true,
    "supports_auto_increment": false,
    "supports_identity_columns": false,
    "supports_sequences": true,
    "supports_partitioning": true,
    "supports_full_text_index": false,
    "supports_spatial_index": true,
    "supports_transactional_ddl": false
  },
  {
    "kind": "sql_server",
    "label": "sqlserver",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "comment",
      "create_index",
      "drop_index",
      "rebuild_index",
      "index_type",
      "index_include",
      "index_filter",
      "index_comment",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "create_function",
      "drop_function",
      "create_sequence",
      "drop_sequence",
      "alter_owner",
      "grant_revoke",
      "temporary_table",
      "transactional_ddl",
      "identity_columns"
    ],
    "max_identifier_length": 128,
    "supports_schemas": true,
    "supports_catalogs": true,
    "max_columns_per_table": 1024,
    "supports_json_type": true,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": true,
    "supports_auto_increment": false,
    "supports_identity_columns": true,
    "supports_sequences": true,
    "supports_partitioning": true,
    "supports_full_text_index": true,
    "supports_spatial_index": true,
    "supports_transactional_ddl": true
  },
  {
    "kind": "oracle",
    "label": "oracle",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "comment",
      "create_index",
      "drop_index",
      "rebuild_index",
      "index_type",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "create_function",
      "drop_function",
      "create_sequence",
      "drop_sequence",
      "alter_owner",
      "grant_revoke",
      "if_not_exists",
      "temporary_table",
      "identity_columns"
    ],
    "max_identifier_length": 30,
    "supports_schemas": true,
    "supports_catalogs": false,
    "max_columns_per_table": 1000,
    "supports_json_type": true,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": false,
    "supports_auto_increment": false,
    "supports_identity_columns": true,
    "supports_sequences": true,
    "supports_partitioning": true,
    "supports_full_text_index": true,
    "supports_spatial_index": true,
    "supports_transactional_ddl": false
  },
  {
    "kind": "h2",
    "label": "h2",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "comment",
      "create_index",
      "drop_index",
      "rebuild_index",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "create_function",
      "drop_function",
      "if_not_exists",
      "temporary_table",
      "identity_columns"
    ],
    "max_identifier_length": 256,
    "supports_schemas": true,
    "supports_catalogs": false,
    "max_columns_per_table": 1600,
    "supports_json_type": true,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": true,
    "supports_auto_increment": false,
    "supports_identity_columns": true,
    "supports_sequences": true,
    "supports_partitioning": false,
    "supports_full_text_index": true,
    "supports_spatial_index": true,
    "supports_transactional_ddl": false
  },
  {
    "kind": "click_house",
    "label": "clickhouse",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "reorder_column",
      "comment",
      "create_table",
      "drop_table",
      "truncate_table",
      "if_not_exists",
      "temporary_table"
    ],
    "max_identifier_length": 256,
    "supports_schemas": true,
    "supports_catalogs": false,
    "max_columns_per_table": 1000,
    "supports_json_type": true,
    "supports_array_type": true,
    "supports_enum_type": true,
    "supports_uuid_type": true,
    "supports_auto_increment": false,
    "supports_identity_columns": false,
    "supports_sequences": false,
    "supports_partitioning": true,
    "supports_full_text_index": true,
    "supports_spatial_index": false,
    "supports_transactional_ddl": false
  },
  {
    "kind": "manticore_search",
    "label": "manticoresearch",
    "capabilities": [
      "add_column",
      "drop_column",
      "create_table",
      "drop_table",
      "truncate_table",
      "auto_increment"
    ],
    "max_identifier_length": 256,
    "supports_schemas": false,
    "supports_catalogs": false,
    "max_columns_per_table": 512,
    "supports_json_type": true,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": false,
    "supports_auto_increment": true,
    "supports_identity_columns": false,
    "supports_sequences": false,
    "supports_partitioning": false,
    "supports_full_text_index": true,
    "supports_spatial_index": true,
    "supports_transactional_ddl": false
  },
  {
    "kind": "informix",
    "label": "informix",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "create_index",
      "drop_index",
      "rebuild_index",
      "create_table",
      "drop_table",
      "truncate_table",
      "create_trigger",
      "drop_trigger",
      "grant_revoke"
    ],
    "max_identifier_length": 128,
    "supports_schemas": true,
    "supports_catalogs": false,
    "max_columns_per_table": 32767,
    "supports_json_type": false,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": false,
    "supports_auto_increment": false,
    "supports_identity_columns": false,
    "supports_sequences": true,
    "supports_partitioning": true,
    "supports_full_text_index": false,
    "supports_spatial_index": false,
    "supports_transactional_ddl": false
  },
  {
    "kind": "questdb",
    "label": "questdb",
    "capabilities": [
      "add_column",
      "drop_column",
      "rename_column",
      "alter_existing_column",
      "create_table",
      "drop_table",
      "truncate_table",
      "if_not_exists"
    ],
    "max_identifier_length": 256,
    "supports_schemas": false,
    "supports_catalogs": false,
    "max_columns_per_table": 1024,
    "supports_json_type": false,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": false,
    "supports_auto_increment": false,
    "supports_identity_columns": false,
    "supports_sequences": false,
    "supports_partitioning": true,
    "supports_full_text_index": false,
    "supports_spatial_index": false,
    "supports_transactional_ddl": false
  },
  {
    "kind": "soql",
    "label": "soql",
    "capabilities": [],
    "max_identifier_length": 40,
    "supports_schemas": false,
    "supports_catalogs": false,
    "max_columns_per_table": 500,
    "supports_json_type": true,
    "supports_array_type": false,
    "supports_enum_type": false,
    "supports_uuid_type": false,
    "supports_auto_increment": false,
    "supports_identity_columns": false,
    "supports_sequences": false,
    "supports_partitioning": false,
    "supports_full_text_index": false,
    "supports_spatial_index": false,
    "supports_transactional_ddl": false
  }
]
