crates/dbx-sql/src/sql_dialect/snapshots/dbx_sql__sql_dialect__descriptor_snapshots__mysql_descriptor.snap
---
source: crates/dbx-sql/src/sql_dialect/descriptor_snapshots.rs
assertion_line: 7
expression: desc
---
{
  "dialect": "mysql",
  "flags": 1476391935,
  "max_identifier_length": 64,
  "supports_schemas": false,
  "supports_catalogs": false,
  "max_columns_per_table": 4096,
  "max_indexes_per_table": 64,
  "max_query_size_bytes": 16777216,
  "supports_full_text_index": true,
  "supports_spatial_index": true,
  "supports_partitioning": true,
  "supports_table_sampling": false,
  "max_foreign_key_name_length": 64,
  "supports_on_update_cascade": true,
  "supports_on_delete_set_null": true,
  "supports_deferrable_constraints": false,
  "supports_array_type": false,
  "supports_json_type": true,
  "supports_enum_type": true,
  "supports_uuid_type": false,
  "supports_identity_columns": false,
  "supports_auto_increment": true,
  "supports_sequences": false
}
